[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/sidebar/guild_bar/browse_servers_panel.gd" id="1"]

[node name="BrowseServersPanel" type="VBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8
script = ExtResource("1")

[node name="SearchInput" type="LineEdit" parent="."]
layout_mode = 2
custom_minimum_size = Vector2(0, 32)
placeholder_text = "Search servers or spaces..."

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 200)

[node name="ServerList" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 2
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 12
